force-app/main/default/objects/FieloPLT__EmailTemplate__c/FieloPLT__EmailTemplate__c.object-meta.xml
<CustomObject>
    <description>Contains the content used in Email Campaigns and Transactional Emails.</description>
    <label>Email Template</label>
    <nameField>
        <label>Email Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>