force-app/main/default/objects/FieloPLT__EmailTemplate__c/fields/FieloPLT__Action__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Action that triggers a Transactional Email. An Action represents a behavior you want to encourage in a Member. Actions are configured in the Libraries tab.</description>
    <inlineHelpText>Enter an Action. An Action represents a behavior you want to encourage in a Member. You can configure Actions in the Libraries tab.</inlineHelpText>
    <label>Action</label>
    <referenceTo>FieloPLT__Action__c</referenceTo>
    <relationshipLabel>Email Templates</relationshipLabel>
    <relationshipName>EmailTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>