force-app/main/default/objects/FieloPLT__EmailTemplate__c/fields/FieloPLT__DataClass__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__DataClass__c</fullName>
    <description>Only used in Email Campaigns. It is an Apex class used to configure the fields that will be merged in the Salesforce Email Template if those fields can&apos;t be accessed from the target Object.</description>
    <inlineHelpText>If your template will be used in an Email Campaign and it requires fields unaccessible from the target Object, choose the Apex class that will configure the fields to be merged in the Salesforce Email Template.</inlineHelpText>
    <label>Data Class</label>
    <length>80</length>
    <type>Text</type>
</CustomField>