force-app/main/default/objects/FieloPLT__EmailTemplate__c/fields/FieloPLT__FieldSet__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__FieldSet__c</fullName>
    <description>Holds a list of all of the merge fields used in the Salesforce E-mail Template used by an Email Template.</description>
    <inlineHelpText>Ths is a list of all of the merge fields used in the Salesforce E-mail Template used by this Fielo Email Template.</inlineHelpText>
    <label>Field Set</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>