force-app/main/default/objects/FieloPLT__EmailTemplate__c/fields/FieloPLT__IsActive__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, the template is available to be used in Email Campaigns and Transactional Emails.</description>
    <inlineHelpText>When Active, your template is available to be used in Email Campaigns and Transactional Emails.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>