force-app/main/default/objects/FieloPLT__EmailTemplate__c/fields/FieloPLT__Program__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Program the Email Template belongs to.</description>
    <inlineHelpText>This is the Program that the Email Template belongs to.</inlineHelpText>
    <label>Program</label>
    <referenceTo>FieloPLT__Program__c</referenceTo>
    <relationshipLabel>Email Templates</relationshipLabel>
    <relationshipName>EmailTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>