force-app/main/default/objects/FieloPLT__EmailTemplate__c/fields/FieloPLT__Segment__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Segment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Segment(s) applied to a Transactional Email. When using this field, only the Members who are part of the selected Segment(s) will receive the Transactional Email. Segments are configured in the Programs tab.</description>
    <inlineHelpText>To target your Transactional Email by Segment, add the Segment(s) you want to make eligible. If blank, all Program Members will be eligible. You can view, edit and create Segments in the Programs tab.</inlineHelpText>
    <label>Segment</label>
    <referenceTo>FieloPLT__Segment__c</referenceTo>
    <relationshipLabel>Email Templates</relationshipLabel>
    <relationshipName>EmailTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>