force-app/main/default/objects/FieloPLT__EmailTemplate__c/fields/FieloPLT__TemplateType__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__TemplateType__c</fullName>
    <description>Defines whether the Email Template is &quot;Standard&quot; or &quot;Custom&quot;.</description>
    <label>Template Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>