force-app/main/default/objects/FieloPLT__EmailTemplate__c/fields/FieloPLT__TemplateUniqueName__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__TemplateUniqueName__c</fullName>
    <description>Salesforce Email Template that provides the content for this Email Template.</description>
    <inlineHelpText>Choose the Salesforce Email Template that contains the content for your Email Template. To view, edit and create Salesforce Email Templates, go to Email Templates in Salesforce Setup.</inlineHelpText>
    <label>Template Unique Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>