force-app/main/default/objects/FieloPLT__EmailTemplate__c/fields/FieloPLT__Type__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Type__c</fullName>
    <description>Defines whether the template will be used for an Email Campaign or Transactional Emails.</description>
    <inlineHelpText>Choose whether you&apos;ll use this template for Email Campaigns (&quot;Campaign&quot;) or Transactional Emails (&quot;Transaction&quot;).</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Transaction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>