force-app/main/default/objects/FieloPLT__EmailTemplate__c/validationRules/FieloPLT__ProgramValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloPLT__ProgramValidation</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( FieloPLT__Program__c )</errorConditionFormula>
    <errorMessage>The program is mandatory.</errorMessage>
</ValidationRule>