force-app/main/default/objects/FieloPLT__EmailTemplate__c/validationRules/FieloPLT__TemplateUniqueNameMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloPLT__TemplateUniqueNameMandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( FieloPLT__TemplateUniqueName__c )</errorConditionFormula>
    <errorDisplayField>FieloPLT__TemplateUniqueName__c</errorDisplayField>
    <errorMessage>Template Unique Name is mandatory.</errorMessage>
</ValidationRule>