force-app/main/default/objects/FieloPLT__EmailTemplate__c/validationRules/FieloPLT__TypeValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloPLT__TypeValidation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISPICKVAL(FieloPLT__Type__c,&apos;&apos;))</errorConditionFormula>
    <errorMessage>The type is mandatory.</errorMessage>
</ValidationRule>