force-app/main/default/objects/FieloPLT__EmailTemplate__c/listViews/FieloPLT__All.listView-meta.xml
<ListView>
    <fullName>FieloPLT__All</fullName>
    <columns>NAME</columns>
    <columns>FieloPLT__TemplateUniqueName__c</columns>
    <columns>FieloPLT__Program__c</columns>
    <columns>FieloPLT__FieldSet__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>